# system_monitor

./: .gitignore  README.md
system_monitor/: CMakeLists.txt  package.xml
system_monitor/include/: central_monitor_server.h  system_monitor_client_lib.h
system_monitor/launch/: system_monitor_test.launch
system_monitor/src/: central_monitor_server.cpp  central_monitor_server_node.cpp  client1_node.cpp  client2_node.cpp  client3_node.cpp
system_monitor_client_lib/: CMakeLists.txt  README.md  package.xml
system_monitor_client_lib/src/: system_monitor_client_lib.cpp
